@@ -45,10 +45,10 @@ mjb.includeVideoImages=false
 
 # Download Season Wide Banners
 # Currently only works with TV Episodes
-mjb.includeWideBanners=false
+mjb.includeWideBanners=true
 
 # Only download series banners and not specific season banners
-mjb.onlySeriesBanners=false
+mjb.onlySeriesBanners=true
 
 # Attempt to download different series banners for each season
 # Works if "mjb.seriesOnlyBanners=false" and there are no season banners and "mjb.seriesOnlyBanners=true"
@@ -158,6 +158,14 @@ banners.perspective=true
 banners.perspectiveTop=3.0
 banners.perspectiveBottom=3.0
 banners.perspectiveDirection=right
+banners.addText.title=false
+banners.addText.season=false
+banners.addText.alignment=left
+banners.addText.font=Helvetica
+banners.addText.fontSize=36
+banners.addText.fontColor=LIGHT_GRAY
+banners.addText.fontShadow=DARK_GRAY
+banners.addText.offset=10
 
 # All of the same properties for the thumbnail rendering can be applied to the VideoImages
 videoimages.format=jpg
